--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "src": "/src/index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "./uploads/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
