--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
         {
             "src": "/(.*)",
             "dest": "/src/index.js"
+        },
+        {
+            "src": "/api/uploads/(.*)",
+            "dest": "/uploads/$1"
         }
     ]
 }
